# qt-vscode-template

./: CMakeLists.txt  README.md
src/: main.cpp  widget.cpp  widget.h  widget.ui
